@@ -386,7 +386,7 @@ std::pair<bool, CPath> CheckMuleDirectory(const wxString& desc, const CPath& dir
 	} 
 	
 	theApp->ShowAlert(msg, wxT("Fatal error."), wxICON_ERROR | wxOK);
-	return std::pair<bool, wxString>(false, wxEmptyString);
+	return std::pair<bool, CPath>(false, CPath(wxEmptyString));
 }
 
 
@@ -845,10 +845,7 @@ bool CamuleApp::OnInit()
 		} else {
 			delete p;
 			ShowAlert(_(
-				"You requested to run web server on startup, "
-				"but the amuleweb binary cannot be run. "
-				"Please install the package containing aMule web server, "
-				"or compile aMule using --enable-webserver and run make install"),
+				"You requested to run web server on startup, but the amuleweb binary cannot be run. Please install the package containing aMule web server, or compile aMule using --enable-webserver and run make install"),
 				_("ERROR"), wxOK | wxICON_ERROR);
 		}
 	}
